# inspirehep-mcp

./: .mcp.json  README.md  citations.bib  get_citations.py  pyproject.toml  test_get_bibtex.py
.github/workflows/: ci.yml  release.yml
src/inspirehep_mcp/: api_client.py  server.py  tools.py
tests/: test_tools_integration.py
