[project]
name = "inspirehep-mcp"
version = "0.1.0"
description = "MCP server for InspireHEP - integrate high-energy physics literature resources with LLMs"
readme = "README.md"
license = { text = "AGPL-3.0" }
authors = [
    { name = "MohamedElashri", email = "mail@elashri.com" }
]
keywords = ["mcp", "inspirehep", "hep", "physics", "citations", "arxiv", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/MohamedElashri/inspirehep-mcp"
Repository = "https://github.com/MohamedElashri/inspirehep-mcp"
Issues = "https://github.com/MohamedElashri/inspirehep-mcp/issues"

[project.scripts]
inspirehep-mcp = "inspirehep_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
